Add samples for exercises past.  Add some conveniences for command options.  Ready to start 2025.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,6 +1,5 @@
 {
     "inputs": [
-        { "id": "input-file",                           "type": "pickString", "description": "Select an input file:",                               "options": ["Sample.txt", "Input.txt"],                     "default": "Sample.txt" },
         { "id": "calorie-counting-mode",                "type": "pickString", "description": "Mode argument for calorie-counting:",                 "options": ["1", "3"],                                      "default": "3" },
         { "id": "rock-paper-scissors-mode",             "type": "pickString", "description": "Mode argument for rock-paper-scissors:",              "options": ["hand", "outcome"],                             "default": "outcome" },
         { "id": "rucksack-reorganization-mode",         "type": "pickString", "description": "Mode argument for rucksack-reorganization:",          "options": ["duplicateItems", "teamBadgeItems"],            "default": "teamBadgeItems" },
@@ -23,7 +22,7 @@
         {
             "type": "swift",
             "request": "launch",
-            "args": [ "--top", "${input:calorie-counting-mode}", "${input:input-file}" ],
+            "args": [ "--top", "${input:calorie-counting-mode}" ],
             "cwd": "${workspaceFolder:AdventOfCode}",
             "name": "Debug calorie-counting",
             "target": "calorie-counting",
@@ -33,7 +32,7 @@
         {
             "type": "swift",
             "request": "launch",
-            "args": [ "--top", "${input:calorie-counting-mode}", "${input:input-file}" ],
+            "args": [ "--top", "${input:calorie-counting-mode}" ],
             "cwd": "${workspaceFolder:AdventOfCode}",
             "name": "Release calorie-counting",
             "target": "calorie-counting",
@@ -43,7 +42,7 @@
         {
             "type": "swift",
             "request": "launch",
-            "args": [ "--moveInterpretation", "${input:rock-paper-scissors-mode}", "${input:input-file}" ],
+            "args": [ "--moveInterpretation", "${input:rock-paper-scissors-mode}" ],
             "cwd": "${workspaceFolder:AdventOfCode}",
             "name": "Debug rock-paper-scissors",
             "target": "rock-paper-scissors",
@@ -53,7 +52,7 @@
         {
             "type": "swift",
             "request": "launch",
-            "args": [ "--moveInterpretation", "${input:rock-paper-scissors-mode}", "${input:input-file}" ],
+            "args": [ "--moveInterpretation", "${input:rock-paper-scissors-mode}" ],
             "cwd": "${workspaceFolder:AdventOfCode}",
             "name": "Release rock-paper-scissors",
             "target": "rock-paper-scissors",
@@ -63,7 +62,7 @@
         {
             "type": "swift",
             "request": "launch",
-            "args": [ "--sumPrioritiesOf", "${input:rucksack-reorganization-mode}", "${input:input-file}" ],
+            "args": [ "--sumPrioritiesOf", "${input:rucksack-reorganization-mode}" ],
             "cwd": "${workspaceFolder:AdventOfCode}",
             "name": "Debug rucksack-reorganization",
             "target": "rucksack-reorganization",
@@ -73,7 +72,7 @@
         {
             "type": "swift",
             "request": "launch",
-            "args": [ "--sumPrioritiesOf", "${input:rucksack-reorganization-mode}", "${input:input-file}" ],
+            "args": [ "--sumPrioritiesOf", "${input:rucksack-reorganization-mode}" ],
             "cwd": "${workspaceFolder:AdventOfCode}",
             "name": "Release rucksack-reorganization",
             "target": "rucksack-reorganization",
@@ -83,7 +82,7 @@
         {
             "type": "swift",
             "request": "launch",
-            "args": [ "--overlapCheck", "${input:camp-cleanup-mode}", "${input:input-file}" ],
+            "args": [ "--overlapCheck", "${input:camp-cleanup-mode}" ],
             "cwd": "${workspaceFolder:AdventOfCode}",
             "name": "Debug camp-cleanup",
             "target": "camp-cleanup",
@@ -93,7 +92,7 @@
         {
             "type": "swift",
             "request": "launch",
-            "args": [ "--overlapCheck", "${input:camp-cleanup-mode}", "${input:input-file}" ],
+            "args": [ "--overlapCheck", "${input:camp-cleanup-mode}" ],
             "cwd": "${workspaceFolder:AdventOfCode}",
             "name": "Release camp-cleanup",
             "target": "camp-cleanup",
@@ -103,7 +102,7 @@
         {
             "type": "swift",
             "request": "launch",
-            "args": [ "--mode", "${input:supply-stacks-mode}", "${input:input-file}" ],
+            "args": [ "--mode", "${input:supply-stacks-mode}" ],
             "cwd": "${workspaceFolder:AdventOfCode}",
             "name": "Debug supply-stacks",
             "target": "supply-stacks",
@@ -113,7 +112,7 @@
         {
             "type": "swift",
             "request": "launch",
-            "args": [ "--mode", "${input:supply-stacks-mode}", "${input:input-file}" ],
+            "args": [ "--mode", "${input:supply-stacks-mode}" ],
             "cwd": "${workspaceFolder:AdventOfCode}",
             "name": "Release supply-stacks",
             "target": "supply-stacks",
@@ -123,7 +122,7 @@
         {
             "type": "swift",
             "request": "launch",
-            "args": [ "--mode", "${input:tuning-trouble-mode}", "${input:input-file}" ],
+            "args": [ "--mode", "${input:tuning-trouble-mode}" ],
             "cwd": "${workspaceFolder:AdventOfCode}",
             "name": "Debug tuning-trouble",
             "target": "tuning-trouble",
@@ -133,7 +132,7 @@
         {
             "type": "swift",
             "request": "launch",
-            "args": [ "--mode", "${input:tuning-trouble-mode}", "${input:input-file}" ],
+            "args": [ "--mode", "${input:tuning-trouble-mode}" ],
             "cwd": "${workspaceFolder:AdventOfCode}",
             "name": "Release tuning-trouble",
             "target": "tuning-trouble",
@@ -143,7 +142,7 @@
         {
             "type": "swift",
             "request": "launch",
-            "args": [ "--mode", "${input:no-space-left-on-device-mode}", "${input:input-file}" ],
+            "args": [ "--mode", "${input:no-space-left-on-device-mode}" ],
             "cwd": "${workspaceFolder:AdventOfCode}",
             "name": "Debug no-space-left-on-device",
             "target": "no-space-left-on-device",
@@ -153,7 +152,7 @@
         {
             "type": "swift",
             "request": "launch",
-            "args": [ "--mode", "${input:no-space-left-on-device-mode}", "${input:input-file}" ],
+            "args": [ "--mode", "${input:no-space-left-on-device-mode}" ],
             "cwd": "${workspaceFolder:AdventOfCode}",
             "name": "Release no-space-left-on-device",
             "target": "no-space-left-on-device",
@@ -163,7 +162,7 @@
         {
             "type": "swift",
             "request": "launch",
-            "args": [ "--mode", "${input:treetop-tree-house-mode}", "${input:input-file}" ],
+            "args": [ "--mode", "${input:treetop-tree-house-mode}" ],
             "cwd": "${workspaceFolder:AdventOfCode}",
             "name": "Debug treetop-tree-house",
             "target": "treetop-tree-house",
@@ -173,7 +172,7 @@
         {
             "type": "swift",
             "request": "launch",
-            "args": [ "--mode", "${input:treetop-tree-house-mode}", "${input:input-file}" ],
+            "args": [ "--mode", "${input:treetop-tree-house-mode}" ],
             "cwd": "${workspaceFolder:AdventOfCode}",
             "name": "Release treetop-tree-house",
             "target": "treetop-tree-house",
@@ -183,7 +182,7 @@
         {
             "type": "swift",
             "request": "launch",
-            "args": [ "${input:trebuchet-mode}", "${input:input-file}" ],
+            "args": [ "${input:trebuchet-mode}" ],
             "cwd": "${workspaceFolder:AdventOfCode}",
             "name": "Debug trebuchet",
             "target": "trebuchet",
@@ -193,7 +192,7 @@
         {
             "type": "swift",
             "request": "launch",
-            "args": [ "${input:trebuchet-mode}", "${input:input-file}" ],
+            "args": [ "${input:trebuchet-mode}" ],
             "cwd": "${workspaceFolder:AdventOfCode}",
             "name": "Release trebuchet",
             "target": "trebuchet",
@@ -203,7 +202,7 @@
         {
             "type": "swift",
             "request": "launch",
-            "args": [ "--mode", "${input:cube-conundrum-mode}", "${input:input-file}" ],
+            "args": [ "--mode", "${input:cube-conundrum-mode}" ],
             "cwd": "${workspaceFolder:AdventOfCode}",
             "name": "Debug cube-conundrum",
             "target": "cube-conundrum",
@@ -213,7 +212,7 @@
         {
             "type": "swift",
             "request": "launch",
-            "args": [ "--mode", "${input:cube-conundrum-mode}", "${input:input-file}" ],
+            "args": [ "--mode", "${input:cube-conundrum-mode}" ],
             "cwd": "${workspaceFolder:AdventOfCode}",
             "name": "Release cube-conundrum",
             "target": "cube-conundrum",
@@ -223,7 +222,7 @@
         {
             "type": "swift",
             "request": "launch",
-            "args": [ "--mode", "${input:gear-ratios-mode}", "${input:input-file}" ],
+            "args": [ "--mode", "${input:gear-ratios-mode}" ],
             "cwd": "${workspaceFolder:AdventOfCode}",
             "name": "Debug gear-ratios",
             "target": "gear-ratios",
@@ -233,7 +232,7 @@
         {
             "type": "swift",
             "request": "launch",
-            "args": [ "--mode", "${input:gear-ratios-mode}", "${input:input-file}" ],
+            "args": [ "--mode", "${input:gear-ratios-mode}" ],
             "cwd": "${workspaceFolder:AdventOfCode}",
             "name": "Release gear-ratios",
             "target": "gear-ratios",
@@ -243,7 +242,7 @@
         {
             "type": "swift",
             "request": "launch",
-            "args": [ "--mode", "${input:scratchcards-mode}", "${input:input-file}" ],
+            "args": [ "--mode", "${input:scratchcards-mode}" ],
             "cwd": "${workspaceFolder:AdventOfCode}",
             "name": "Debug scratchcards",
             "target": "scratchcards",
@@ -253,7 +252,7 @@
         {
             "type": "swift",
             "request": "launch",
-            "args": [ "--mode", "${input:scratchcards-mode}", "${input:input-file}" ],
+            "args": [ "--mode", "${input:scratchcards-mode}" ],
             "cwd": "${workspaceFolder:AdventOfCode}",
             "name": "Release scratchcards",
             "target": "scratchcards",
@@ -263,7 +262,7 @@
         {
             "type": "swift",
             "request": "launch",
-            "args": [ "${input:input-file}" ],
+            "args": [  ],
             "cwd": "${workspaceFolder:AdventOfCode}",
             "name": "Debug if-you-give-a-seed-a-fertilizer",
             "target": "if-you-give-a-seed-a-fertilizer",
@@ -273,7 +272,7 @@
         {
             "type": "swift",
             "request": "launch",
-            "args": [ "${input:input-file}" ],
+            "args": [  ],
             "cwd": "${workspaceFolder:AdventOfCode}",
             "name": "Release if-you-give-a-seed-a-fertilizer",
             "target": "if-you-give-a-seed-a-fertilizer",
@@ -283,7 +282,7 @@
         {
             "type": "swift",
             "request": "launch",
-            "args": [ "--mode", "${input:historian-hysteria-mode}", "${input:input-file}" ],
+            "args": [ "--mode", "${input:historian-hysteria-mode}" ],
             "cwd": "${workspaceFolder:AdventOfCode}",
             "name": "Debug historian-hysteria",
             "target": "historian-hysteria",
@@ -293,7 +292,7 @@
         {
             "type": "swift",
             "request": "launch",
-            "args": [ "--mode", "${input:historian-hysteria-mode}", "${input:input-file}" ],
+            "args": [ "--mode", "${input:historian-hysteria-mode}" ],
             "cwd": "${workspaceFolder:AdventOfCode}",
             "name": "Release historian-hysteria",
             "target": "historian-hysteria",
@@ -303,7 +302,7 @@
         {
             "type": "swift",
             "request": "launch",
-            "args": [ "${input:input-file}" ],
+            "args": [  ],
             "cwd": "${workspaceFolder:AdventOfCode}",
             "name": "Debug red-nosed-reports",
             "target": "red-nosed-reports",
@@ -313,7 +312,7 @@
         {
             "type": "swift",
             "request": "launch",
-            "args": [ "${input:input-file}" ],
+            "args": [  ],
             "cwd": "${workspaceFolder:AdventOfCode}",
             "name": "Release red-nosed-reports",
             "target": "red-nosed-reports",
@@ -323,7 +322,7 @@
         {
             "type": "swift",
             "request": "launch",
-            "args": [ "${input:input-file}" ],
+            "args": [  ],
             "cwd": "${workspaceFolder:AdventOfCode}",
             "name": "Debug secret-entrance",
             "target": "secret-entrance",
@@ -333,7 +332,7 @@
         {
             "type": "swift",
             "request": "launch",
-            "args": [ "${input:input-file}" ],
+            "args": [  ],
             "cwd": "${workspaceFolder:AdventOfCode}",
             "name": "Release secret-entrance",
             "target": "secret-entrance",
