Checkpoint close to resolving part one.

--- a/.swiftpm/xcode/xcshareddata/xcschemes/tuning-trouble.xcscheme
+++ b/.swiftpm/xcode/xcshareddata/xcschemes/tuning-trouble.xcscheme
@@ -50,6 +50,16 @@
             ReferencedContainer = "container:">
          </BuildableReference>
       </BuildableProductRunnable>
+      <CommandLineArguments>
+         <CommandLineArgument
+            argument = "packet"
+            isEnabled = "NO">
+         </CommandLineArgument>
+         <CommandLineArgument
+            argument = "message"
+            isEnabled = "YES">
+         </CommandLineArgument>
+      </CommandLineArguments>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
