Day 3 is now working... could be more expressive, though.  Reworked `Package.swift` a bit to reduce some boilerplate.

--- a/.swiftpm/xcode/xcshareddata/xcschemes/AdventOfCode-Package.xcscheme
+++ b/.swiftpm/xcode/xcshareddata/xcschemes/AdventOfCode-Package.xcscheme
@@ -245,6 +245,20 @@
                ReferencedContainer = "container:">
             </BuildableReference>
          </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "lobby"
+               BuildableName = "lobby"
+               BlueprintName = "lobby"
+               ReferencedContainer = "container:">
+            </BuildableReference>
+         </BuildActionEntry>
       </BuildActionEntries>
    </BuildAction>
    <TestAction
@@ -268,9 +282,9 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "gift-shop"
-            BuildableName = "gift-shop"
-            BlueprintName = "gift-shop"
+            BlueprintIdentifier = "lobby"
+            BuildableName = "lobby"
+            BlueprintName = "lobby"
             ReferencedContainer = "container:">
          </BuildableReference>
       </BuildableProductRunnable>
@@ -294,9 +308,9 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "gift-shop"
-            BuildableName = "gift-shop"
-            BlueprintName = "gift-shop"
+            BlueprintIdentifier = "lobby"
+            BuildableName = "lobby"
+            BlueprintName = "lobby"
             ReferencedContainer = "container:">
          </BuildableReference>
       </BuildableProductRunnable>
